[package]
name = "h1"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99.3"
async-trait = "0.1.9"
httparse = "1.3.4"
path-tree = "0.1.8"
time = "0.1.42"
futures-preview = "0.3.0-alpha.18"
femme = "1.2.0"
log = "0.4.8"
veryfast = { path = "../VeryFast" }
lazy_static = "1.3.0"
rental = "0.5.4"
